hphp/test/slow/inout/bad-async-generator.php.expectf

Fatal error: Parameters may not be marked inout on async generators in %s/bad-async-generator.php on line 3
